--- a/MD5Algorithem/md5window.ui
+++ b/MD5Algorithem/md5window.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MD5Window</string>
+   <string>MD5 mAker</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
